# vibe-sim-iot-weather

./: .gitignore  README.md  pyproject.toml
scripts/: run_multi_device.py  run_simulation.py  run_web_app.py
src/core/: device.py
src/data/: db.py  query.py
src/web/: app.py
src/web/templates/: index.html
tests/: test_device.py
