[project]
name = "vibe-sim-iot-weather"
version = "0.1.0"
description = "Vibe coding to create a simulation of an IoT device that sends weather data to a DuckDB database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.9.1",
    "pandas>=2.1.1",
    "numpy>=1.26.1",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "matplot>=0.1.9",
    "flask>=3.1.0",
    "ruff>=0.11.0",
]
